# pytest_marker_bugzilla

./: .gitignore  .travis.yml  CHANGES.txt  README.md  README.rst  README.txt  conftest.py  pytest_bugzilla.py  pytest_bugzilla.py.orig  pytest_marker_bugzilla.py  requirements.txt  results.txt  setup.cfg  setup.py  test_nothin.py  tox.ini
pytest_marker_bugzilla/: pytest_marker_bugzilla.py
pytest_marker_bugzilla.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: conftest.py  test_bugzilla.py  test_bugzilla.py.in  test_nothing.py
