[metadata]
name=pytest-marker-bugzilla
summary=py.test bugzilla integration plugin, using markers
version=0.9.1
description-file=README.rst
license=GPL
author=Eric Sammons, Lukas Bednar
author_email=elsammons@gmail.com, lukyn17@gmail.com
home-page=http://github.com/eanxgeek/pytest_marker_bugzilla
keywords=
    pytest
    bugzilla
    plugin
classifiers=
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License (GPL)
    Environment :: Plugins
    Framework :: Pytest
    Operating System :: POSIX
    Operating System :: Microsoft :: Windows
    Operating System :: MacOS :: MacOS X
    Programming Language :: Python
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.6
    Topic :: Software Development :: Testing
    Topic :: Software Development :: Quality Assurance
    Topic :: Utilities
[files]
modules=
    pytest_marker_bugzilla
[entry_points]
pytest11 =
    pytest_marker_bugzilla = pytest_marker_bugzilla
[global]
zip_safe=True
[bdist_wheel]
universal = 1
[sdist]
formats = zip
